steel-codegen/tests/snapshots/snapshot_tests__valid_organizations.snap
---
source: steel-codegen/tests/snapshot_tests.rs
assertion_line: 39
expression: rd
---
resource: organizations
version: 1
schema:
  id:
    type: uuid
    primary: true
    generated: true
  name:
    type: string
    required: true
    min: 1
    max: 200
  slug:
    type: string
    required: true
    unique: true
    min: 1
    max: 100
  plan:
    type: enum
    values:
      - free
      - pro
      - enterprise
    default: free
  created_at:
    type: timestamp
    generated: true
  updated_at:
    type: timestamp
    generated: true
endpoints:
  list:
    method: GET
    path: /organizations
    auth:
      - admin
    pagination: cursor
  create:
    method: POST
    path: /organizations
    auth:
      - admin
    input:
      - name
      - slug
      - plan
