steel-codegen/tests/snapshots/snapshot_tests__valid_tags.snap
---
source: steel-codegen/tests/snapshot_tests.rs
assertion_line: 21
expression: rd
---
resource: tags
version: 1
schema:
  id:
    type: uuid
    primary: true
    generated: true
  name:
    type: string
    required: true
    unique: true
    min: 1
    max: 100
  color:
    type: string
    max: 7
  created_at:
    type: timestamp
    generated: true
endpoints:
  list:
    method: GET
    path: /tags
    auth: public
    pagination: offset
